<resources>
    <string name="app_name">Bayesian Tennis</string>
    <string name="action_settings">Settings</string>
    <string name="outlook">Outlook</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="outlook_prompt">Choose outlook...</string>
    <string name="temperature_prompt">Choose temperature...</string>
    <string name="humidity_prompt">Choose humidity...</string>
    <string name="wind_prompt">Choose wind...</string>


    <string-array name="outlook_array">
        <item>Sunny</item>
        <item>Overcast</item>
        <item>Rain</item>
    </string-array>

    <string-array name="temperature_array">
        <item>Hot</item>
        <item>Mild</item>
        <item>Cool</item>
    </string-array>

    <string-array name="humidity_array">
        <item>High</item>
        <item>Normal</item>
    </string-array>

    <string-array name="wind_array">
        <item>Strong</item>
        <item>Weak</item>
    </string-array>
</resources>
